--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.7.1"
   },
@@ -53,6 +53,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/react-dom": "^19.2.3",
     "gh-pages": "^6.3.0"
   }
 }
